<resources>
    <string name="app_name">MuViApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login">Login</string>

    <string name="register">Register</string>
    <string name="register_email_hint">Enter email</string>
    <string name="register_first_name_hint">Enter First Name</string>
    <string name="register_last_name_hint">Enter Last Name</string>
    <string name="register_success">You have been successfully registered!</string>

    <string name="sign_up">Don\'t have an account on MuVi? Register now!</string>
    <string name="existing_user">Already registered? LogIn</string>

    <string name="error_username_cannot_be_empty">Username cannot be empty!</string>
    <string name="error_password_cannot_be_empty">Password cannot be empty!</string>
    <string name="error_email_cannot_be_empty">Email cannot be empty!</string>
    <string name="error_first_name_cannot_be_empty">First Name cannot be empty!</string>
    <string name="error_last_name_cannot_be_empty">Last Name cannot be empty!</string>

    <string name="icon_font_views">{faw-eye} %d</string>

    <!-- menu strings -->
    <string name="nav_menu_profile">My Profile</string>
    <string name="nav_menu_categories">Categories</string>
    <string name="nav_menu_communicate">Communicate</string>
    <string name="nav_menu_share">Share</string>
    <string name="nav_menu_signout">Sign Out</string>
</resources>
