<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_menu_profile"
            android:icon="@mipmap/ic_account_circle_black"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_manage"
            android:checked="true"
            android:title="@string/nav_menu_categories" />
    </group>

    <item android:title="@string/nav_menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_menu_share" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_signout"
        android:icon="@mipmap/sign_out"
        app:iconTint="@color/colorBlack"
        android:title="@string/nav_menu_signout"/>
</menu>
