<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/margin_large">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_username"
                style="@style/TextStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/register_email_hint"
                android:inputType="text" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_first_name"
                style="@style/TextStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/register_first_name_hint"
                android:inputType="text" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_last_name"
                style="@style/TextStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/register_last_name_hint"
                android:inputType="text" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_password"
                style="@style/TextStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_register"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/register" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_login"
                style="@style/TextStyleWhite.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_large"
                android:text="@string/existing_user"/>
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/layout_progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>